fix: change PagerSlidingTabStrip to TabLayout, fix problem.

--- a/app/src/main/res/layout/content_main_menu.xml
+++ b/app/src/main/res/layout/content_main_menu.xml
@@ -1,28 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              app:layout_behavior="@string/appbar_scrolling_view_behavior"
-              tools:showIn="@layout/activity_main_menu">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:showIn="@layout/activity_main_menu">
 
-    <com.astuetz.PagerSlidingTabStrip
+    <!--<com.astuetz.PagerSlidingTabStrip
         android:id="@+id/slidingTabStrip"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:textColor="@color/colorPrimary"
         app:pstsDividerColor="@color/colorPrimary"
+        app:pstsDividerPadding="1dp"
         app:pstsIndicatorColor="@color/colorPrimaryLight"
         app:pstsShouldExpand="true"
         app:pstsTextAllCaps="true"
-        app:pstsUnderlineColor="@color/colorPrimary"/>
+        app:pstsUnderlineColor="@color/colorPrimary" />-->
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="48dp" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpagerMainMenu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/blue_light_background"/>
+        android:background="@color/blue_light_background" />
 
 </LinearLayout>
