--- a/app/src/main/res/layout/content_user_profile.xml
+++ b/app/src/main/res/layout/content_user_profile.xml
@@ -14,16 +14,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:paddingBottom="@dimen/activity_vertical_margin">
 
         <ImageView
             android:id="@+id/imageAvatarUserProfile"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@mipmap/ic_user"/>
+            android:src="@mipmap/ic_user" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,19 +38,19 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
                 android:textSize="16sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textNameUserProfile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white" />
 
         </LinearLayout>
 
     </LinearLayout>
 
-    <com.astuetz.PagerSlidingTabStrip
+    <!--<com.astuetz.PagerSlidingTabStrip
         android:id="@+id/slidingTabStrip"
         android:layout_width="match_parent"
         android:layout_height="48dp"
@@ -61,7 +61,13 @@
         app:pstsShouldExpand="true"
         app:pstsTabPaddingLeftRight="8dp"
         app:pstsTextAllCaps="true"
-        app:pstsUnderlineColor="@color/colorPrimary" />
+        app:pstsUnderlineColor="@color/colorPrimary" />-->
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@color/white" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpagerProfile"
